--- a/themes/PaperMod/layouts/partials/share_icons.html
+++ b/themes/PaperMod/layouts/partials/share_icons.html
@@ -1,4 +1,4 @@
-{{- $pageurl := .Permalink }}
+{{- $pageurl := (.Param "shortlink") | default .Permalink }}
 {{- $title := .Title }}
 
 {{- $.Scratch.Set "tags" ""}}
