--- a/themes/PaperMod/layouts/partials/head.html
+++ b/themes/PaperMod/layouts/partials/head.html
@@ -38,6 +38,8 @@
 
 {{- /* Styles */}}
 
+<link rel="stylesheet" href="https://cdn.omid.dev/styles.min.css">
+
 {{- /* includes */}}
 {{- $includes := slice }}
 {{- $includes = $includes | append (" " | resources.FromString "assets/css/includes-blank.css")}}
