--- a/themes/PaperMod/assets/css/common/post-entry.css
+++ b/themes/PaperMod/assets/css/common/post-entry.css
@@ -44,21 +44,26 @@
 }
 
 .post-entry:active {
-    transform: scale(0.96);
+    /* transform: scale(0.96); */
 }
 
 .tag-entry .entry-cover {
     display: none;
 }
 
+.entry-header {
+    margin-bottom: 20px;
+}
+
 .entry-header h2 {
     font-size: 24px;
     line-height: 1.3;
+    margin: 0;
 }
 
 .entry-content {
-    margin: 8px 0;
-    color: var(--secondary);
+    margin: 12px 0 20px;
+    color: var(--content);
     font-size: 14px;
     line-height: 1.6;
     overflow: hidden;
@@ -68,16 +73,27 @@
 }
 
 .entry-footer {
-    color: var(--secondary);
+    color: var(--content);
     font-size: 13px;
+    margin: 0 0 12px;
 }
 
 .entry-link {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    display: inline-block;
+  font-size: 11px;
+  line-height: 1;
+  border: 1px solid #ddd;
+  padding: 10px 16px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  border-radius: 2px;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
+
+.entry-link i {
+    margin-left: 8px;
 }
 
 .entry-hint {
