--- a/themes/PaperMod/assets/css/core/reset.css
+++ b/themes/PaperMod/assets/css/core/reset.css
@@ -24,12 +24,18 @@ h6 {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Vazirmatn;
-    font-size: 18px;
+    font-family: 'Open Sans', sans-serif, Vazirmatn;
+    font-size: 16px;
     line-height: 1.6;
     word-break: break-word;
     background: var(--theme);
 }
+
+
+:lang(fa) 	{
+    font-family: 'Vazirmatn FD', 'Open Sans', sans-serif;
+}
+
 
 article,
 aside,
@@ -52,6 +58,7 @@ h4,
 h5,
 h6 {
     line-height: 1.2;
+    font-weight: 600;
 }
 
 h1,
