--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -1,36 +1,36 @@
 :root {
     --gap: 24px;
     --content-gap: 20px;
-    --nav-width: 1024px;
-    --main-width: 720px;
+    --nav-width: 1200px;
+    --main-width: 1200px;
     --header-height: 60px;
     --footer-height: 60px;
     --radius: 8px;
-    --theme: rgb(255, 255, 255);
-    --entry: rgb(255, 255, 255);
-    --primary: rgb(30, 30, 30);
-    --secondary: rgb(108, 108, 108);
-    --tertiary: rgb(214, 214, 214);
-    --content: rgb(31, 31, 31);
-    --code-block-bg: rgb(28, 29, 33);
-    --code-bg: rgb(245, 245, 245);
-    --border: rgb(238, 238, 238);
+    --theme: #ffffff;
+    --entry: #ffffff;
+    --primary: #1e1e1e;
+    --secondary: #6c6c6c;
+    --tertiary: #d6d6d6;
+    --content: #4a4a4a;
+    --code-block-bg: #1c1d21;
+    --code-bg: #f5f5f5;
+    --border: #f1f1f1;
 }
 
 .dark {
-    --theme: rgb(29, 30, 32);
-    --entry: rgb(46, 46, 51);
-    --primary: rgb(218, 218, 219);
-    --secondary: rgb(155, 156, 157);
-    --tertiary: rgb(65, 66, 68);
-    --content: rgb(196, 196, 197);
-    --code-block-bg: rgb(46, 46, 51);
-    --code-bg: rgb(55, 56, 62);
-    --border: rgb(51, 51, 51);
+    --theme: #1d1e20;
+    --entry: #2e2e33;
+    --primary: #dadadb;
+    --secondary: #9b9c9d;
+    --tertiary: #414244;
+    --content: #c4c4c5;
+    --code-block-bg: #2e2e33;
+    --code-bg: #37383e;
+    --border: #333333;
 }
 
 .list {
-    background: var(--code-bg);
+    background: var(--theme);
 }
 
 .dark.list {
