--- a/themes/PaperMod/layouts/partials/post_meta.html
+++ b/themes/PaperMod/layouts/partials/post_meta.html
@@ -19,5 +19,5 @@
 {{- end }}
 
 {{- with ($scratch.Get "meta") }}
-{{- delimit . "&nbsp;·&nbsp;" | safeHTML -}}
+{{- delimit . "&nbsp;|&nbsp;" | safeHTML -}}
 {{- end -}}
