--- a/themes/PaperMod/assets/css/common/main.css
+++ b/themes/PaperMod/assets/css/common/main.css
@@ -79,3 +79,43 @@ div.highlight:hover .copy-code,
 pre:hover .copy-code {
     display: block;
 }
+
+ul.meta {
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  color: var(--content);
+  font-size: 14px;
+  line-height: 1.3;
+  margin: 0 0 20px;
+  padding: 0 0 10px;
+    padding-bottom: 10px;
+  list-style: none;
+}
+
+ul.meta li {
+    line-height: 1.5;
+  align-self: flex-end;
+  flex-wrap: nowrap;
+  padding-bottom: 5px;
+}
+
+ul.meta li i {
+    padding-right: 9px;
+    font-size: 17px;
+}
+
+[dir=rtl] ul.meta li i {
+    padding-right: 0;
+    padding-left: 9px;
+}
+
+ul.meta li::after {
+    content: "|";
+    font-weight: bold;
+    padding: 0 8px;
+}
+ul.meta li:last-child:after {
+    display:none;
+    padding:0
+}
