--- a/themes/PaperMod/layouts/partials/post_meta.html
+++ b/themes/PaperMod/layouts/partials/post_meta.html
@@ -1,23 +1,37 @@
-{{- $scratch := newScratch }}
+<ul class="meta">
 
-{{- if not .Date.IsZero -}}
-{{- $scratch.Add "meta" (slice (printf "<span title='%s'>%s</span>" (.Date) (.Date | time.Format (default "January 2, 2006" site.Params.DateFormat)))) }}
-{{- end }}
+    {{- if not (.Param "hideAuthor") -}}
+        <li>
+            <span class="screen-reader-text">Post author:</span>
+            <i class=" fas fa-user-circle" aria-hidden="true" role="img"></i>
+            {{- with (partial "author.html" .) }}
+                {{- . }}
+            {{- end }}
+        </li>
+    {{- end }}
 
-{{- if (.Param "ShowReadingTime") -}}
-{{- $scratch.Add "meta" (slice (i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime))) }}
-{{- end }}
+    {{- if not .Date.IsZero -}}
+        <li>
+            <span class="screen-reader-text">Post published:</span>
+            <i aria-hidden="true" role="img" class="far fa-calendar-alt"></i>
+            <span title="{{(.Date | time.Format (default "January 2, 2006" site.Params.DateFormat))}}">{{(.Date | time.Format (default "January 2, 2006" site.Params.DateFormat))}}</span>
+        </li>
+    {{- end }}
 
-{{- if (.Param "ShowWordCount") -}}
-{{- $scratch.Add "meta" (slice (i18n "words" .WordCount | default (printf "%d words" .WordCount))) }}
-{{- end }}
+    {{- if (.Param "ShowReadingTime") -}}
+        <li>
+            <span class="screen-reader-text">Reading Time:</span>
+            <i aria-hidden="true" role="img" class="fa-solid fa-stopwatch"></i>
+            {{i18n "read_time" .ReadingTime | default (printf "%d min" .ReadingTime)}}
+        </li>
+    {{- end }}
 
-{{- if not (.Param "hideAuthor") -}}
-{{- with (partial "author.html" .) }}
-{{- $scratch.Add "meta" (slice .) }}
-{{- end }}
-{{- end }}
+    {{- if (.Param "ShowWordCount") -}}
+        <li>
+            <span class="screen-reader-text">Word Count:</span>
+            <i aria-hidden="true" role="img" class="fa-solid fa-hashtag"></i>
+            {{i18n "words" .WordCount | default (printf "%d words" .WordCount)}}
+        </li>
+    {{- end }}
 
-{{- with ($scratch.Get "meta") }}
-{{- delimit . "&nbsp;|&nbsp;" | safeHTML -}}
-{{- end -}}
+</ul>
