--- a/themes/PaperMod/layouts/partials/post_meta.html
+++ b/themes/PaperMod/layouts/partials/post_meta.html
@@ -14,7 +14,7 @@
         <li>
             <span class="screen-reader-text">Post published:</span>
             <i aria-hidden="true" role="img" class="far fa-calendar-alt"></i>
-            <span title="{{(.Date | time.Format (default "January 2, 2006" site.Params.DateFormat))}}">{{(.Date | time.Format (default "January 2, 2006" site.Params.DateFormat))}}</span>
+            <span title="{{(.Date | time.Format (default "Jan 02, 2006 3:04 PM Z07:00" site.Params.DateFormat))}}">{{(.Date | time.Format (default "January 2, 2006" site.Params.DateFormat))}}</span>
         </li>
     {{- end }}
 
