improve share behavior

--- a/themes/PaperMod/assets/css/common/main.css
+++ b/themes/PaperMod/assets/css/common/main.css
@@ -116,3 +116,15 @@ ul.meta li:last-child:after {
     display:none;
     padding:0
 }
+
+.toast-message {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 1000;
+}
