--- a/themes/PaperMod/layouts/partials/share_icons.html
+++ b/themes/PaperMod/layouts/partials/share_icons.html
@@ -18,15 +18,15 @@
     <h3 class="share-buttons-label">{{ i18n "share_my_post" }}</h3>
     <ul class="share-buttons">
         <li>
-            <a class="shortlink" target="_blank" rel="noopener noreferrer" title="Copy Shortlink" aria-label="copy shortlink"
-                href="https://x.com/intent/tweet/?text={{ $title }}&amp;url={{ $shortpageurl }}&amp;hashtags={{- $.Scratch.Get "tags" -}}">
+            <a class="shortlink" onclick="(copyContent({{ $shortpageurl }}))" target="_blank" rel="noopener noreferrer" title="Copy Shortlink" aria-label="copy shortlink"
+                href="#">
                 <i class="fa-solid fa-link"></i>
             </a>
         </li>
         {{- if (or (cond ($custom) (in $ShareButtons "x") (true)) (cond ($custom) (in $ShareButtons "twitter") (true))) }}
         <li>
             <a class="x-twitter" target="_blank" rel="noopener noreferrer" aria-label="share {{ $title | plainify }} on x"
-                href="https://x.com/intent/tweet/?text={{ $title }}&amp;url={{ $shortpageurl }}&amp;hashtags={{- $.Scratch.Get "tags" -}}">
+                href="https://x.com/intent/post/?text={{ $title }}&amp;url={{ $shortpageurl }}&amp;hashtags={{- $.Scratch.Get "tags" -}}">
                 <i class="fa-brands fa-x-twitter"></i>
             </a>
         </li>
