--- a/themes/PaperMod/layouts/partials/share_icons.html
+++ b/themes/PaperMod/layouts/partials/share_icons.html
@@ -18,7 +18,7 @@
     <h3 class="share-buttons-label">{{ i18n "share_my_post" }}</h3>
     <ul class="share-buttons">
         <li>
-            <a class="shortlink" onclick="(copyContent({{ $shortpageurl }}))" target="_blank" rel="noopener noreferrer" title="Copy Shortlink" aria-label="copy shortlink"
+            <a class="shortlink" onclick="(copyContent('{{ $shortpageurl }}'))" target="_blank" rel="noopener noreferrer" title="Copy Shortlink" aria-label="copy shortlink"
                 href="#">
                 <i class="fa-solid fa-link"></i>
             </a>
