--- a/themes/omid-dev/layouts/partials/templates/schema_json.html
+++ b/themes/omid-dev/layouts/partials/templates/schema_json.html
@@ -2,7 +2,7 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "{{- ( site.Params.schema.publisherType | default "Organization") | title -}}",
+  "@type": "{{- ( site.Params.schema.publisherType | default "Person") | title -}}",
   "name": {{ site.Title }},
   "url": {{ site.Home.Permalink }},
   "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
