--- a/themes/omid-dev/layouts/partials/social_icons.html
+++ b/themes/omid-dev/layouts/partials/social_icons.html
@@ -2,7 +2,7 @@
     {{- range site.Params.socialIcons }}
     <a href="{{ trim .url " " | safeURL }}" target="_blank" rel="noopener noreferrer me"
         title="{{ (.title | default .name) | title }}">
-        {{ partial "svg.html" . }}
+        <i class="{{ .icon }}"></i>
     </a>
     {{- end }}
 </div>
