use boxed style for all pages and posts

--- a/themes/omid-dev/assets/css/common/post-single.css
+++ b/themes/omid-dev/assets/css/common/post-single.css
@@ -1,3 +1,11 @@
+.post-single, .page-single  {
+    background: var(--theme);
+    border-radius: var(--radius);
+    padding: 40px;
+    box-shadow: var(--shadow-md);
+    border: 1px solid var(--border);
+}
+
 .page-header,
 .post-header {
     margin: 24px auto var(--content-gap) auto;
