--- a/themes/omid-dev/layouts/_default/archives.html
+++ b/themes/omid-dev/layouts/_default/archives.html
@@ -1,5 +1,6 @@
 {{- define "main" }}
 
+<div class="page-content">
 <header class="page-header">
   <h1>
     {{ .Title }}
@@ -79,5 +80,6 @@
 </div>
 {{- end }}
 {{- end }}
+</div>{{/* end page-content */}}
 
 {{- end }}{{/* end main */}}
